# NyaySetu

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
IVR/: .gitignore  config.py  fallback.py  gemini_chain.py  ivr_router.py  logger.py  main.py  requirements.txt  stt.py  tts.py  utils.py
backend/: .env  .gitignore  AGENT_INTEGRATION.md  app.py  appointment_service.py  auth.py  chat.py  document_summarizer.py  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test_agent_integration.py
backend/ai_court/: VOICE_SETUP.md  __init__.py  main.py  requirements.txt
backend/ai_court/api/: endpoints.py
backend/ai_court/core/: config.py  embedding.py  llama_index_setup.py  llm.py  qdrant_client.py  query_engine.py  state_manager.py
backend/ai_court/data/: cases.json  sessions.json
backend/ai_court/models/: api_models.py  document_metadata.py
backend/ai_court/services/: case_manager.py  debate_orchestrator.py  document_ingestion.py  metadata_extractor.py  speech_recognition.py  voice_service.py
backend/ai_court/static/: index.html
backend/core_agent/: agent.py  rag.py
backend/integrations/: portia_client.py
backend/models/: User.js
backend/routers/: appointments.py  documents.py  portia_admin_rag.py  portia_appointments.py  portia_chat.py  portia_compliance.py  portia_evidence.py
backend/routes/: auth.js
backend_2.0/: app.py  main.py  pyproject.toml
backend_2.0/core_agent/: agent.py
backend_2.0/instance/: nyaysetu.db
docs/: PORTIA_CHATBOT.md  PORTIA_FEATURES.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AICourtInterface.tsx  ChatLauncherButton.tsx  ChatMessage.tsx  Chatbot.tsx  FloatingChatbot.tsx  HeroSection.tsx  JusticeJourney.tsx  LaunchScreen.d.ts  LaunchScreen.jsx  LaunchScreen.tsx  NyayaLogSidebar.d.ts  NyayaLogSidebar.jsx  NyayaLogSidebar.tsx  NyayaSidebarToggle.jsx  PrivateRoute.tsx  Sidebar.tsx  SplashScreen.tsx  TypingIndicator.tsx  VaaneeAvatar.tsx  Welcome.tsx  WelcomeScreen.tsx
frontend/src/components/appointment/: AppointmentScheduler.tsx
frontend/src/components/auth/: AlertMessage.tsx  AuthForm.tsx  AuthPage.tsx  ProfilePicUpload.tsx  SignoutModal.tsx  SocialAuthButtons.tsx
frontend/src/contexts/: SessionContext.tsx
frontend/src/hooks/: useSpeechRecognition.ts
frontend/src/pages/: DashboardPage.tsx  LawyerDashboard.tsx  UserDashboard.tsx
frontend/src/services/: api.ts
frontend/src/utils/: axios.ts
nginx/: nginx.conf
(+1 files in other folders)
