[project]
name = "nyaysetu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "deepgram-sdk>=3.0.0",
    "elevenlabs>=2.8.1",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "faster-whisper>=1.1.1",
    "firebase-admin>=7.1.0",
    "google-adk[database]>=0.0.1",
    "google-auth>=2.40.3",
    "google-cloud-bigquery>=3.35.1",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-speech>=2.33.0",
    "google-cloud-storage>=3.2.0",
    "google-generativeai==0.3.0",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langgraph>=0.6.3",
    "langid>=1.1.6",
    "llama-index>=0.13.0",
    "llama-index-embeddings-huggingface>=0.6.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "twilio>=9.7.0",
    "uvicorn>=0.35.0",
]
